2002-12-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03554] Re: Undo/Redo
	* doc/README.func (REDO): added
			(UNDO): added
	* doc-jp/README.func (REDO): added
			(UNDO): added
	* scripts/w3mhelp.cgi.in: (Page/Cursor motion): add undoPos, redoPos

2002-12-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: func: REDO, UNDO

2002-12-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03553] Undo/Redo
	* fm.h (Buffer): add undo
		(BufferPos): added
	* funcname.tab (REDO): added
			(UNDO): added
	* main.c (save_buffer_position): added
		(main): save_buffer_position
		(resetPos): added
		(undoPos): added
		(redoPos): added
	* proto.h (undoPos): added
		(redoPos): added

2002-12-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03552] Re: link list
	* menu.c (accesskey_menu): check hseq
		(list_menu): check hseq

2002-12-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03551] Re: External URI loader
	* file.c (loadGeneralFile): fix SCM_UNKNONWN

2002-12-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: func: LIST, LIST_MENU, MOVE_LIST_MENU

2002-12-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03549] link list
	* anchor.c (addMultirowsImg): add a->slave
		(getAnchorText): arg AnchorList *al
		(link_list_panel): added
	* funcname.tab (LIST): added
		(LIST_MENU): added
		(MOVE_LIST_MENU): added
	* main.c (anchorMn): added
		(accessKey): use anchorMn()
		(listMn): added
		(movlistMn): added
		(linkLst): added
	* map.c (searchMapList): not static
	* menu.c (accesskey_menu): pass AnchorList to getAnchorText()
		(lmKeys): added
		(lmKeys2): added
		(nlmKeys): added
		(nlmKeys2): added
		(lmGoto): added
		(lmSelect): added
		(list_menu): added
	* proto.h (linkLst): added
		(listMn): added
		(movlistMn): added
		(list_menu): added
		(searchMapList): added
		(getAnchorText): arg AnchorList *al
		(link_list_panel): added
	* doc/README.func (LIST): added
		(LIST_MENU): added
		(MOVE_LIST_MENU): added